# security_cam_project

./: ffmpeg_options.txt  security_cam_project_pat.txt
backend/: .gitignore  CMakeLists.txt  build_ffmpeg.sh  build_glew.sh  collect_ffmpeg_deps.sh  export_vars.sh  install_PG.sh
backend/av/: CMakeLists.txt
backend/av/include/: AV.hpp  AVIO.h  AVUtil.h  AVUtil.hpp  Demuxer.hpp  Muxer.hpp  RtspStream.h  Stream.hpp  StreamWriter.h  StreamWriter.hpp  Transcode.h  Transcode.hpp
backend/av/src/: AVIO.c  Demuxer.cpp  Muxer.cpp  RtspStream.cpp  Stream.cpp  StreamWriter.cpp  Transcode.c  Transcode.cpp
backend/av_backend/: manage.py
backend/av_backend/av_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/av_cli/: CMakeLists.txt
backend/av_cli/src/: main.c  main.cpp
backend/desktop/: CMakeLists.txt
backend/desktop/src/: main.cpp
backend/rtsp_server/: README.md
backend/scripts/: build_boost.sh  build_ffmpeg.sh  build_gsoap.sh  convert_onvif_wsdls2cpp.sh  export_vars.sh
